Capitalize plugin name

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.r1tschy.mergelab</id>
-    <name>mergelab</name>
-    <vendor>r1tschy</vendor>
+    <name>MergeLab</name>
+    <vendor>Richard Liebscher</vendor>
 
     <depends>com.intellij.modules.platform</depends>
 
