--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,7 @@
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.r1tschy.mergelab
-pluginName = mergelab
-# SemVer format -> https://semver.org
+pluginName = MergeLab
 pluginVersion = 0.0.1
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
