--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -9,6 +9,8 @@
     <depends>com.intellij.modules.vcs</depends>
     <depends>Git4Idea</depends>
 
+    <resource-bundle>messages.GitlabBundle</resource-bundle>
+
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="com.github.r1tschy.mergelab.services.MyApplicationService"/>
 
@@ -42,6 +44,11 @@
     <actions>
         <action id="com.github.r1tschy.mergelab.actions.OpenInBrowserActionGroup"
                 class="com.github.r1tschy.mergelab.actions.OpenInBrowserActionGroup">
+            <override-text place="EditorTabPopup"/>
+            <override-text place="ProjectViewPopup" use-text-of-place="EditorTabPopup"/>
+            <override-text place="EditorPopup" use-text-of-place="EditorTabPopup"/>
+            <override-text place="FavoritesPopup" use-text-of-place="EditorTabPopup"/>
+
             <add-to-group group-id="RevealGroup"/>
             <add-to-group group-id="Vcs.Log.ContextMenu" anchor="last"/>
             <add-to-group group-id="VcsHistoryActionsGroup" anchor="last"/>
