--- a/src/main/resources/messages/GitlabBundle.properties
+++ b/src/main/resources/messages/GitlabBundle.properties
@@ -1,5 +1,4 @@
-name=My Plugin
-applicationService=Application service
+name=MergeLab
 
 # Open in Browser
 action.com.github.r1tschy.mergelab.actions.OpenInBrowserActionGroup.EditorTabPopup.text=GitLab
