--- a/src/main/resources/messages/GitlabBundle.properties
+++ b/src/main/resources/messages/GitlabBundle.properties
@@ -2,3 +2,7 @@ name=MergeLab
 
 # Open in Browser
 action.com.github.r1tschy.mergelab.actions.OpenInBrowserActionGroup.EditorTabPopup.text=GitLab
+accounts.default.missing=Missing default GiLab account
+
+# Auth
+action.com.github.r1tschy.mergelab.accounts.ui.AddGitLabAccountFromToken.text=Log In with Token\u2026
