--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,5 @@ gradleVersion = 7.3.3
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
 # suppress inspection "UnusedProperty"
 kotlin.stdlib.default.dependency = false
+
+useJacksonSerializer = true
