--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,7 +13,7 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Settings -->
-        <applicationConfigurable
+        <projectConfigurable
                 parentId="project.propVCSSupport.Mappings"
                 groupWeight="-500"
                 instance="com.github.r1tschy.mergelab.settings.GitLabSettingsConfigurable"
