Make clone dialog work

--- a/src/main/resources/messages/GitlabBundle.properties
+++ b/src/main/resources/messages/GitlabBundle.properties
@@ -6,3 +6,12 @@ accounts.default.missing=Missing default GiLab account
 
 # Auth
 action.de.richardliebscher.intellij.gitlab.accounts.ui.AddGitLabAccountFromToken.text=Log In with Token\u2026
+account.access.token.missing=Access token missing
+credentials.invalid.auth.data=Invalid authentication data
+
+# Clone
+clone.dialog.clone.failed=Clone failed
+clone.error.unable.to.create.dest.dir=Unable to create destination directory
+clone.error.unable.to.find.dest=Unable to find destination directory
+clone.dialog.no.project.found=Nothing to show
+clone.dialog.project.search.error=Failed to load projects
