--- a/src/main/resources/messages/GitlabBundle.properties
+++ b/src/main/resources/messages/GitlabBundle.properties
@@ -1,7 +1,7 @@
 name=GitLab Repositories
 
 # Open in Browser
-action.de.richardliebscher.intellij.gitlab.actions.OpenInBrowserActionGroup.EditorTabPopup.text=GitLab
+action.de.richardliebscher.intellij.gitlab.actions.OpenInBrowserAction.EditorTabPopup.text=GitLab
 accounts.default.missing=Missing default GiLab account
 
 # Auth
