--- a/src/main/resources/messages/GitlabBundle.properties
+++ b/src/main/resources/messages/GitlabBundle.properties
@@ -15,3 +15,4 @@ clone.error.unable.to.create.dest.dir=Unable to create destination directory
 clone.error.unable.to.find.dest=Unable to find destination directory
 clone.dialog.no.project.found=Nothing to show
 clone.dialog.project.search.error=Failed to load projects
+clone.setting.ssh=Use SSH to clone repositories
