--- a/src/main/resources/messages/GitlabBundle.properties
+++ b/src/main/resources/messages/GitlabBundle.properties
@@ -1,4 +1,4 @@
-name=GitLab Repositories
+name=GitLab4Devs
 
 # Open in Browser
 action.de.richardliebscher.intellij.gitlab.actions.OpenInBrowserAction.EditorTabPopup.text=GitLab
