--- a/src/main/resources/messages/GitlabBundle.properties
+++ b/src/main/resources/messages/GitlabBundle.properties
@@ -2,7 +2,7 @@ name=GitLab4Devs
 
 # Open in Browser
 action.de.richardliebscher.intellij.gitlab.actions.OpenInBrowserAction.EditorTabPopup.text=GitLab
-accounts.default.missing=Missing default GiLab account
+accounts.default.missing=Missing default GitLab account
 
 # Auth
 action.de.richardliebscher.intellij.gitlab.accounts.ui.AddGitLabAccountFromToken.text=Log In with Token\u2026
