Revert "Yet another rename"
This reverts commit f01634d8522a0932c3eb47786385223a29324e14.

--- a/src/main/resources/messages/GitlabBundle.properties
+++ b/src/main/resources/messages/GitlabBundle.properties
@@ -1,4 +1,4 @@
-name=GitLab4Devs
+name=GitLab Repositories
 
 # Open in Browser
 action.de.richardliebscher.intellij.gitlab.actions.OpenInBrowserAction.EditorTabPopup.text=GitLab
