--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = de.richardliebscher.intellij.gitlab
-pluginName = GitLab4Devs
+pluginName = GitLab Repositories
 pluginVersion = 0.1.0
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
