--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,7 +2,7 @@
 <idea-plugin>
     <id>de.richardliebscher.intellij.gitlab</id>
 
-    <name>GitLab4Devs</name>
+    <name>GitLab Repositories</name>
     <vendor url="https://github.com/R1tschY">Richard Liebscher</vendor>
 
     <depends>com.intellij.modules.platform</depends>
