Migrate away from com.intellij.collaboration
... to support newer IntelliJ versions. Just copied the required classes.

--- a/src/main/resources/messages/GitlabBundle.properties
+++ b/src/main/resources/messages/GitlabBundle.properties
@@ -8,6 +8,10 @@ accounts.default.missing=Missing default GitLab account
 action.de.richardliebscher.intellij.gitlab.accounts.ui.AddGitLabAccountFromToken.text=Log In with Token\u2026
 account.access.token.missing=Access token missing
 credentials.invalid.auth.data=Invalid authentication data
+login.link=Log in
+accounts.none.added=No accounts added
+accounts.add.link=Add account\u2026
+accounts.set.default=Set as Default
 
 # Clone
 clone.dialog.clone.failed=Clone failed
@@ -16,3 +20,4 @@ clone.error.unable.to.find.dest=Unable to find destination directory
 clone.dialog.no.project.found=Nothing to show
 clone.dialog.project.search.error=Failed to load projects
 clone.setting.ssh=Use SSH to clone repositories
+
